--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,26 @@
 [egg_info]
 tag_build = dev
 tag_svn_revision = true
+
+[pudge]
+theme = pythonpaste.org
+docs = docs/index.txt docs/license.txt
+doc_base = docs/
+dest = docs/html
+modules = waitforit
+title = Wait For It
+organization = Python Paste
+organization_url = http://pythonpaste.org/
+mailing_list_url = /community/mailing-list.html
+trac_url = http://trac.pythonpaste.org/
+settings = no_about=true
+           link1=/ Paste
+           link3=http://cheeseshop.python.org/pypi/WaitForIt Download
+           extra_credits=Hosting courtesy of <a href="http://tummy.com">Tummy.com</a>
+highlighter = pygments
+
+[publish]
+doc-dir=docs/html
+doc-dest=scp://ianb@webwareforpython.org/home/paste/htdocs/waitforit/
+make-dirs=1
+
