--- a/setup.cfg
+++ b/setup.cfg
@@ -24,3 +24,5 @@ doc-dir=docs/html
 doc-dest=scp://ianb@webwareforpython.org/home/paste/htdocs/waitforit/
 make-dirs=1
 
+[aliases]
+distribute = register sdist bdist_egg upload pudge publish
