Separate out the template into a different file.  Allow some more options for the template.  Call app_iter.close().

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ tag_svn_revision = true
 
 [pudge]
 theme = pythonpaste.org
-docs = docs/index.txt docs/license.txt
+docs = docs/index.txt docs/license.txt docs/news.txt
 doc_base = docs/
 dest = docs/html
 modules = waitforit
@@ -14,7 +14,8 @@ organization_url = http://pythonpaste.org/
 mailing_list_url = /community/mailing-list.html
 trac_url = http://trac.pythonpaste.org/
 settings = no_about=true
-           link1=/ Paste
+           link1=news.html News
+           link2=/ Paste
            link3=http://cheeseshop.python.org/pypi/WaitForIt Download
            extra_credits=Hosting courtesy of <a href="http://tummy.com">Tummy.com</a>
 highlighter = pygments
